backend/src/main/java/com/example/etstur_java_backend/error/LoginFailedException.java
package com.example.etstur_java_backend.error;

public class LoginFailedException extends RuntimeException{
    public LoginFailedException() {
        super("Login failed.");
    }
}
